# spice-protocol

./: .gitlab-ci.yml  .gitpublish  CHANGELOG.md  Makefile.am  NEWS  README.md  configure.ac  meson.build  spice-protocol.spec  spice-protocol.spec.in
docs/: how_to_release.md
spice/: Makefile.am  controller_prot.h  enums.h  foreign_menu_prot.h  macros.h  meson.build  qxl_dev.h  stream-device.h  vd_agent.h
