spice_protocol_headers = [
  'barrier.h',
  'end-packed.h',
  'enums.h',
  'ipc_ring.h',
  'macros.h',
  'protocol.h',
  'qxl_dev.h',
  'qxl_windows.h',
  'start-packed.h',
  'stats.h',
  'types.h',
  'vd_agent.h',
  'stream-device.h',
]

install_headers(spice_protocol_headers,
                subdir : join_paths('spice-1', 'spice'))
